fuel-indexer-tests/macro-data/fail_if_indexer_module_is_empty.stderr
error: custom attribute panicked
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_indexer_module_is_empty.rs
  |
  | / #[indexer(
  | |     manifest = "fuel-indexer-tests/assets/macros/simple_wasm.yaml"
  | | )]
  | |__^
  |
  = help: message: Manifest at 'fuel-indexer-tests/assets/macros/simple_wasm.yaml' does not exist

error[E0601]: `main` function not found in crate `$CRATE`
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_indexer_module_is_empty.rs
  |
  | mod indexer {}
  |               ^ consider adding a `main` function to `$WORKSPACE/fuel-indexer-tests/macro-data/fail_if_indexer_module_is_empty.rs`
